--- a/Projects/Pokemon Project/index.html
+++ b/Projects/Pokemon Project/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Pokemon Cards</title>
-    <link rel="icon" href="./pikachu.png" type="image/icon type" />
+    <link rel="icon" href="./pikachu.webp" type="image/icon type" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
