corrections german portfilio page

--- a/portfolio-german.html
+++ b/portfolio-german.html
@@ -407,8 +407,7 @@
                 In diesem Abschnitt können Sie Beispiele meiner Projekte vom 3.
                 bis zum 6. Monat meines Studiums erkunden. <br />
                 Die meisten dieser Projekte sind grundlegende
-                Einzelseiten-Websites.
-                <br />
+                Einzelseiten-Websites.Einzelne Seite
                 <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
               </p>
             </div>
@@ -489,12 +488,12 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
-                    title="Einzelne Seite"
+                    title="Einzelseite"
                     aria-hidden="true"
                   ></i>
                   <i
                     class="fa-solid fa-mobile-screen-button"
-                    title="Responsiv"
+                    title="Responsive"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -523,7 +522,7 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
-                    title="Einzelne Seite"
+                    title="Einzelseite"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -533,7 +532,7 @@
                   ></i>
                   <i
                     class="fa-solid fa-mobile-screen-button"
-                    title="Responsiv"
+                    title="Responsive"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -561,12 +560,12 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
-                    title="Einzelne Seite"
+                    title="Einzelseite"
                     aria-hidden="true"
                   ></i>
                   <i
                     class="fa-solid fa-mobile-screen-button"
-                    title="Responsiv"
+                    title="Responsive"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -758,7 +757,7 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
-                    title="Einzelne Seite"
+                    title="Einzelseite"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -801,12 +800,12 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-copy"
-                    title="Mehrere Seiten"
+                    title="Mehrseitiges Projekt"
                     aria-hidden="true"
                   ></i>
                   <i
                     class="fa-solid fa-mobile-screen-button"
-                    title="Responsiv"
+                    title="Responsive"
                     aria-hidden="true"
                   ></i>
                   <i
@@ -958,7 +957,7 @@
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
-                    title="Einzelne Seite"
+                    title="Einzelseite"
                     aria-hidden="true"
                   ></i>
                   <i
