add React to portfolio pages

--- a/portfolio-german.html
+++ b/portfolio-german.html
@@ -398,7 +398,7 @@
           <div class="introduction">
             <div class="h3-title">
               <h3 id="second-module-heading">
-                Projekte mit HTML, CSS und JavaScript
+                Projekte mit HTML, CSS, JavaScript und React
               </h3>
             </div>
             <div class="paragraph-div">
@@ -452,6 +452,10 @@
                   <td>
                     <i class="fa-brands fa-markdown" aria-hidden="true"></i>
                   </td>
+                  <!--React-->
+                  <td>
+                    <i class="fa-brands fa-react" aria-hidden="true"></i>
+                  </td>
                 </tr>
                 <tr>
                   <td>Linux</td>
@@ -463,6 +467,7 @@
                   <td>Command Line</td>
                   <td>Responsives Design</td>
                   <td>Markdown</td>
+                  <td>React</td>
                 </tr>
               </table>
             </div>
