--- a/portfolio-english.html
+++ b/portfolio-english.html
@@ -386,7 +386,7 @@
           <div class="introdution">
             <div class="h3-title">
               <h3 id="second-module-heading">
-                Projects with HTML, CSS and JavaScript
+                Projects with HTML, CSS, JavaScript and React
               </h3>
             </div>
             <div class="paragraph-div">
@@ -439,6 +439,9 @@
                   <td>
                     <i class="fa-brands fa-markdown" aria-hidden="true"></i>
                   </td>
+                  <!--React-->
+
+                  <td><i class="fa-brands fa-react" aria-hidden="true"></i></td>
                 </tr>
                 <tr>
                   <td>Linux</td>
@@ -450,6 +453,7 @@
                   <td>Command Line</td>
                   <td>Resonsive Design</td>
                   <td>Markdown</td>
+                  <td>React</td>
                 </tr>
               </table>
             </div>
