--- a/portfolio-english.html
+++ b/portfolio-english.html
@@ -386,7 +386,7 @@
           <div class="introdution">
             <div class="h3-title">
               <h3 id="second-module-heading">
-                Projects with HTML, CSS, JavaScript and React
+                Projects with HTML, CSS and JavaScript
               </h3>
             </div>
             <div class="paragraph-div">
