--- a/portfolio-german.html
+++ b/portfolio-german.html
@@ -398,7 +398,7 @@
           <div class="introduction">
             <div class="h3-title">
               <h3 id="second-module-heading">
-                Projekte mit HTML, CSS, JavaScript und React
+                Projekte mit HTML, CSS und JavaScript
               </h3>
             </div>
             <div class="paragraph-div">
