fixing toggle, split contact  pages, rearrangement of pages in folders and updating links

--- a/index-german.html
+++ b/index-german.html
@@ -63,10 +63,8 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="script.js"></script>
+    <script src="./Scripts/script.js"></script>
     <link rel="stylesheet" href="./Styles/style.css" />
-    <!-- <link rel="stylesheet" href="./styles.css" /> -->
-    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -115,21 +113,21 @@
                 </li>
                 <li>
                   <a
-                    href="./portfolio-german.html#projects-heading"
+                    href="./Pages/portfolio-german.html#projects-heading"
                     aria-label="All Projects"
                     >Alle Projekte</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./portfolio-german.html#1st-module"
+                    href="./Pages/portfolio-german.html#1st-module"
                     aria-label="Basic Projects"
                     >Grundlegende Projekte</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./portfolio-german.html#2nd-module"
+                    href="./Pages/portfolio-german.html#2nd-module"
                     aria-label="JavaScript projects section"
                     >JS Projekte</a
                   >
@@ -137,7 +135,7 @@
               </ul>
             </li>
             <li>
-              <a href="index-german.html#contact" aria-label="Contact"
+              <a href="./Pages/contact-deutsch.html" aria-label="Contact"
                 >Kontakt</a
               >
             </li>
@@ -497,7 +495,7 @@
           </div>
           <div id="show-more-button">
             <a
-              href="./portfolio-german.html"
+              href="../Pages/portfolio-german.html"
               aria-label="Mehr Projekte anzeigen"
             >
               <button class="show-more-button">Zeig mehr</button></a
@@ -616,154 +614,9 @@
           </div>
         </div>
       </section>
-      <section id="contact" aria-labelledby="contact-heading">
-        <div class="container">
-          <div class="h2-title">
-            <h2 id="contact-heading">Kontaktiere mich</h2>
-          </div>
-          <div class="contact-options-divs">
-            <div class="contact-form">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Schick mir eine Nachricht</h3>
-                </div>
-                <div class="form">
-                  <form action="https://formspree.io/f/xnnaakea" method="POST">
-                    <label for="name">Ihr Name:</label> <br />
-                    <input type="text" id="name" name="name" required />
-                    <br />
-                    <label for="email">Ihre E-Mail:</label> <br />
-                    <input type="email" id="email" name="_replyto" required />
-                    <br />
-                    <label for="message">Ihre Nachricht:</label> <br />
-                    <textarea id="message" name="message" required></textarea>
-                    <br />
-                    <button type="submit">Senden</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="contact-directly">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Kontaktieren Sie mich direkt</h3>
-                </div>
-                <div class="contact-options">
-                  <ul class="contact-options-list">
-                    <li>
-                      <a
-                        href="mailto: draculady@onmail.com"
-                        aria-label="Email me"
-                        target="_blank"
-                      >
-                        <i
-                          class="fa-regular fa-envelope"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="draculady@onmail.com"> Email</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        target="_blank"
-                        aria-label="LinkedIn profile"
-                      >
-                        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                        <b
-                          title="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        >
-                          LinkedIn</b
-                        >
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/DraculadyCode"
-                        target="_blank"
-                        aria-label="GitHub profile"
-                      >
-                        <i class="fa-brands fa-github" aria-hidden="true"></i>
-                        <b title="https://github.com/DraculadyCode">
-                          GitHub</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a href="sms:+4917685639174" aria-label="Send SMS">
-                        <i
-                          class="fa-regular fa-comment-alt"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="sms:+4917685639174">SMS</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.facebook.com/profile.php?id=61563925780935"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                        <b
-                          title="https://www.facebook.com/profile.php?id=61563925780935"
-                        >
-                          Facebook</b
-                        ></a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="my-files">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Lade meine Dokumente herunter</h3>
-                </div>
-                <div class="files">
-                  <ul class="files-list">
-                    <li>
-                      <a
-                        href="./Files/Diplom Übersetzung 2023.pdf"
-                        download
-                        aria-label="Download my diploma"
-                      >
-                        <i class="fa-solid fa-download" aria-hidden="true"></i>
-                        Lade mein <strong>Diplom</strong> herunter
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="./Files/Kathrin Peled Resume 07.2024 .pdf"
-                        download
-                        aria-label="Download my CV"
-                      >
-                        <i class="fa-solid fa-file" aria-hidden="true"></i>
 
-                        Lade meinen <strong>Lebenslauf</strong> herunter
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="./Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
-                        download
-                        aria-label="Download my professional CV"
-                      >
-                        <i class="fa-regular fa-file" aria-hidden="true"></i>
-                        Lade meinen
-                        <strong>beruflichen Lebenslauf</strong> herunter
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <div class="hire-me">
-        <a href="index.html#contact" aria-label="Hire me">
+        <a href="./Pages/contact-deutsch.html#contact" aria-label="Hire me">
           <div class="face">
             <div class="eyes">
               <div class="eye"></div>
@@ -803,7 +656,7 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="./Scripts/script.js"></script>
     <script src="./Scripts/carousel.js"></script>
 
     <!-- Async or defer for external scripts -->
