--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
       rel="stylesheet"
     />
 
-    <script src="script.js"></script>
+    <script src="./Scripts/script.js"></script>
     <link rel="stylesheet" href="./Styles/style.css" />
-    <!-- <link rel="stylesheet" href="./styles.css" /> -->
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -117,21 +116,21 @@
                 </li>
                 <li>
                   <a
-                    href="./portfolio-english.html#projects-heading"
+                    href="./Pages/portfolio-english.html"
                     aria-label="All projects page"
                     >All projects</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./portfolio-english.html#1st-module"
+                    href="./Pages/portfolio-english.html#1st-module"
                     aria-label="Basic projects section"
                     >Basic projects</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./portfolio-english.html#2nd-module"
+                    href="./Pages/portfolio-english.html#2nd-module"
                     aria-label="JavaScript projects section"
                     >JS projects</a
                   >
@@ -139,7 +138,9 @@
               </ul>
             </li>
             <li>
-              <a href="index.html#contact" aria-label="Contact">Contact</a>
+              <a href="./Pages/contact-english.html" aria-label="Contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </nav>
@@ -480,7 +481,7 @@
           </div>
           <div id="show-more-button">
             <a
-              href="./portfolio-english.html"
+              href="../Pages/portfolio-english.html"
               title="Explore all projects"
               aria-label="Show more projects button"
             >
@@ -600,172 +601,9 @@
           </div>
         </div>
       </section>
-      <section id="contact" aria-labelledby="contact-heading">
-        <div class="container">
-          <div class="h2-title">
-            <h2 id="contact-heading">Contact Me</h2>
-          </div>
-          <div class="contact-options-divs">
-            <div class="contact-form">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Send me a message</h3>
-                </div>
-                <div class="form">
-                  <form action="https://formspree.io/f/xnnaakea" method="POST">
-                    <label for="name">Your Name:</label> <br />
-                    <input
-                      type="text"
-                      id="name"
-                      name="name"
-                      required
-                      autocomplete="name"
-                    />
-                    <br />
-                    <label for="email">Your Email:</label> <br />
-                    <input
-                      type="email"
-                      id="email"
-                      name="_replyto"
-                      required
-                      autocomplete="email"
-                    />
-                    <br />
-                    <label for="message">Your Message:</label> <br />
-                    <textarea
-                      id="message"
-                      name="message"
-                      required
-                      autocomplete="message"
-                    ></textarea>
-                    <br />
-                    <button type="submit">Send</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="contact-directly">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Contact me directly</h3>
-                </div>
-                <div class="contact-options">
-                  <ul class="contact-options-list">
-                    <li>
-                      <a
-                        href="mailto: draculady@onmail.com"
-                        aria-label="Email me"
-                        target="_blank"
-                      >
-                        <i
-                          class="fa-regular fa-envelope"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="draculady@onmail.com"> Email</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        target="_blank"
-                        aria-label="LinkedIn profile"
-                      >
-                        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                        <b
-                          title="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        >
-                          LinkedIn</b
-                        >
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/DraculadyCode"
-                        target="_blank"
-                        aria-label="GitHub profile"
-                      >
-                        <i class="fa-brands fa-github" aria-hidden="true"></i>
-                        <b title="https://github.com/DraculadyCode">
-                          GitHub</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a href="sms:+4917685639174" aria-label="Send SMS">
-                        <i
-                          class="fa-regular fa-comment-alt"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="sms:+4917685639174">SMS</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.facebook.com/profile.php?id=61563925780935"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                        <b
-                          title="https://www.facebook.com/profile.php?id=61563925780935"
-                        >
-                          Facebook</b
-                        ></a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="my-files">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Download my documents</h3>
-                </div>
-                <div class="files">
-                  <ul class="files-list">
-                    <li>
-                      <a
-                        href="./Files/Diplom Übersetzung 2023.pdf"
-                        download
-                        aria-label="Download my diploma"
-                      >
-                        <i class="fa-solid fa-download" aria-hidden="true"></i>
-                        Download My
-                        <strong>Diplom</strong>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="./Files/Kathrin Peled Resume 07.2024 .pdf"
-                        aria-label="Download my resume CV"
-                        download
-                      >
-                        <i class="fa-solid fa-file" aria-hidden="true"></i>
 
-                        Download My Full <strong>Resume</strong>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="./Files/Kathrin Peled Professional Resume.pdf"
-                        aria-label="Download my professional resume"
-                        download
-                      >
-                        <i class="fa-regular fa-file" aria-hidden="true"></i>
-                        Download My
-                        <strong>Professional Resume</strong>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <div class="hire-me">
-        <a href="index.html#contact" aria-label="Hire me">
+        <a href="./Pages/contact-english.html#contact" aria-label="Hire me">
           <div class="face">
             <div class="eyes">
               <div class="eye"></div>
@@ -804,7 +642,7 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="./Scripts/script.js"></script>
     <script src="./Scripts/carousel.js"></script>
     <!-- Async or defer for external scripts -->
     <script
