interactive resume page progress

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -21,7 +21,7 @@
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
     <meta name="author" content="Kathrin Peled Draculady" />
-    <meta name="robots" content="resume, follow" />
+    <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -137,7 +137,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-resume">
       <div class="wrapper">
         <div class="cover cover-left"></div>
         <div class="cover cover-right turn"></div>
@@ -197,10 +197,7 @@
     <script src="../Scripts/script.js"></script>
     <script src="../Scripts/resume.js"></script>
     <!-- Async or defer for external scripts -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
-    ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
