--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -21,7 +21,7 @@
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
     <meta name="author" content="Kathrin Peled Draculady" />
-    <meta name="robots" content="portfolio, follow" />
+    <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
