resume page updates

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -183,6 +183,56 @@
               </div>
             </div>
           </div>
+          <!-- page 1 & 2 -->
+          <div class="book-page page-right" id="turn-1">
+            <!-- page 1 (work experience) -->
+            <div class="page-front">
+              <h1 class="title">Work Experience</h1>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non,
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non,
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non,
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- page 2 (education) -->
+            <div class="page-back">
+              <!-- <h1 class="title">Education</h1> -->
+            </div>
+          </div>
         </div>
       </div>
     </main>
