--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -175,16 +175,23 @@
                 alias quas hic, soluta libero tempora vel, quibusdam sit eius
                 dicta error! Lorem ipsum dolor sit amet consectetur adipisicing
                 elit. Quas eum soluta blanditiis placeat aut veritatis vitae
-                eaque rem. Voluptates nemo quaerat veniam dolorum.
+                eaque rem. Voluptates nemo quaerat veniam dolorum eaque rem.
+                Voluptates nemo quaerat veniam dolorum
               </p>
               <div class="btn-box">
-                <a href="#" class="btn">Download CV</a>
-                <a href="#" class="btn contact-me">Contact Me</a>
+                <a
+                  href="../Files/Kathrin Peled Professional Resume.pdf"
+                  class="btn"
+                  >Download CV</a
+                >
+                <a href="./contact-english.html" class="btn contact-me"
+                  >Contact Me</a
+                >
               </div>
             </div>
           </div>
           <!-- page 1 & 2 -->
-          <div class="book-page page-right" id="turn-1">
+          <div class="book-page page-right turn" id="turn-1">
             <!-- page 1 (work experience) -->
             <div class="page-front">
               <h1 class="title">Work Experience</h1>
@@ -197,7 +204,8 @@
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non,
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
                   </p>
                 </div>
               </div>
@@ -210,7 +218,8 @@
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non,
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
                   </p>
                 </div>
               </div>
@@ -223,14 +232,222 @@
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non,
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
                   </p>
                 </div>
               </div>
+              <span class="number-page">1</span>
+              <!-- next button -->
+              <span class="nextprev-btn" data-page="turn-1">
+                <i class="bx bx-chevron-right"></i>
+              </span>
             </div>
-            <!-- page 2 (education) -->
+            <!-- page 2 (Work Experiece) -->
             <div class="page-back">
-              <!-- <h1 class="title">Education</h1> -->
+              <h1 class="title">Work Experiece</h1>
+
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <span class="number-page">2</span>
+              <!-- prev button -->
+              <span class="nextprev-btn back" data-page="turn-1">
+                <i class="bx bx-chevron-left"></i>
+              </span>
+            </div>
+          </div>
+          <!-- page 3 & 4 -->
+          <div class="book-page page-right" id="turn-2">
+            <!-- page 3 (Education) -->
+            <div class="page-front">
+              <h1 class="title">Education</h1>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <span class="number-page">3</span>
+              <span class="nextprev-btn" data-page="turn-2">
+                <i class="bx bx-chevron-right"></i>
+              </span>
+            </div>
+            <!-- page 4 (Education) -->
+            <div class="page-back">
+              <h1 class="title">Education</h1>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <div class="workeduc-box">
+                <div class="workeduc-content">
+                  <span class="year"
+                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                  >
+                  <h3>Lorem ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Eum consequatur debitis laborum molestias veritatis nobis
+                    expedita autem sint quas possimus non, eaque rem. Voluptates
+                    nemo quaerat veniam dolorum.
+                  </p>
+                </div>
+              </div>
+              <span class="number-page">4</span>
+              <span class="nextprev-btn back" data-page="turn-2">
+                <i class="bx bx-chevron-left"></i>
+              </span>
+            </div>
+          </div>
+          <!-- page 5 & 6 -->
+          <div class="book-page page-right" id="turn-3">
+            <!-- page 5 (My Skills) -->
+            <div class="page-front">
+              <h1 class="title">My Skills</h1>
+              <div class="skills-box">
+                <div class="skills-content">
+                  <h3>Front-End</h3>
+                  <div class="content">
+                    <span><i class="bx bxl-html5"></i>HTML</span>
+                    <span><i class="bx bxl-css3"></i>CSS</span>
+                    <span><i class="bx bxl-javascript"></i>JavaScript</span>
+                    <span><i class="bx bxl-react"></i>React</span>
+                    <span><i class="bx bxl-bootstrap"></i>Bootstrap</span>
+                    <span><i class="bx bxl-typescript"></i>TypeScript</span>
+                    <span><i class="bx bxl-sass"></i>Sass</span>
+                    <span><i class="bx bxs-devices"></i>Responsive</span>
+                  </div>
+                </div>
+                <div class="skills-content">
+                  <h3>Back-End</h3>
+                  <div class="content">
+                    <span><i class="bx bxl-mongodb"></i>Mongo DB</span>
+                    <span><i class="bx bxl-javascript"></i>JavaScript</span>
+                    <span><i class="bx bxs-file-json"></i>Json</span>
+                    <span><i class="bx bxl-nodejs"></i>Node JS</span>
+                  </div>
+                </div>
+                <div class="skills-content">
+                  <h3>UX/UI Design</h3>
+                  <div class="content">
+                    <span><i class="bx bx-palette"></i>Canva</span>
+                    <span><i class="bx bxl-figma"></i>Figma</span>
+                  </div>
+                </div>
+              </div>
+              <span class="number-page">5</span>
+              <span class="nextprev-btn" data-page="turn-3">
+                <i class="bx bx-chevron-right"></i>
+              </span>
+            </div>
+            <!-- page 6 (Contact form) -->
+            <div class="page-back">
+              <h1 class="title">Contact Me!</h1>
+
+              <span class="number-page">6</span>
+              <span class="nextprev-btn back" data-page="turn-3">
+                <i class="bx bx-chevron-left"></i>
+              </span>
             </div>
           </div>
         </div>
