--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -140,8 +140,9 @@
     <main class="main-resume">
       <div class="wrapper">
         <div class="cover cover-left"></div>
-        <div class="cover cover-right turn"></div>
+        <div class="cover cover-right"></div>
         <div class="book">
+          <!-- page 0 -->
           <div class="book-page page-left">
             <div class="profile-page">
               <img
@@ -181,12 +182,12 @@
               <div class="btn-box">
                 <a
                   href="../Files/Kathrin Peled Professional Resume.pdf"
+                  aria-label="Download my professional resume"
+                  download
                   class="btn"
                   >Download CV</a
                 >
-                <a href="./contact-english.html" class="btn contact-me"
-                  >Contact Me</a
-                >
+                <a href="#contact-box" class="btn contact-me">Contact Me</a>
               </div>
             </div>
           </div>
@@ -297,7 +298,7 @@
             </div>
           </div>
           <!-- page 3 & 4 -->
-          <div class="book-page page-right" id="turn-2">
+          <div class="book-page page-right turn" id="turn-2">
             <!-- page 3 (Education) -->
             <div class="page-front">
               <h1 class="title">Education</h1>
@@ -400,7 +401,7 @@
             </div>
           </div>
           <!-- page 5 & 6 -->
-          <div class="book-page page-right" id="turn-3">
+          <div class="book-page page-right turn" id="turn-3">
             <!-- page 5 (My Skills) -->
             <div class="page-front">
               <h1 class="title">My Skills</h1>
@@ -443,11 +444,40 @@
             <!-- page 6 (Contact form) -->
             <div class="page-back">
               <h1 class="title">Contact Me!</h1>
-
+              <div class="contact-box">
+                <form action="https://formspree.io/f/xnnaakea" method="post">
+                  <input
+                    type="text"
+                    class="field"
+                    placeholder="Full Name"
+                    required
+                  />
+                  <input
+                    type="email"
+                    class="field"
+                    placeholder="Email Address"
+                    required
+                  />
+                  <textarea
+                    name=""
+                    id=""
+                    cols="30"
+                    rows="10"
+                    class="field"
+                    placeholder="Your Message"
+                    required
+                  ></textarea>
+                  <input type="submit" class="btn" value="Send Message" />
+                </form>
+              </div>
               <span class="number-page">6</span>
               <span class="nextprev-btn back" data-page="turn-3">
                 <i class="bx bx-chevron-left"></i>
               </span>
+              <a href="#profile-page" class="back-profile"
+                ><p>Profile</p>
+                <i class="bx bxs-user"></i
+              ></a>
             </div>
           </div>
         </div>
