add twitter and remove smiley from contact page

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -254,6 +254,18 @@
                         ></a
                       >
                     </li>
+                    <li>
+                      <a
+                        href="https://x.com/DraculadyKath"
+                        target="_blank"
+                        aria-label="facebook page"
+                      >
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <b title="https://x.com/DraculadyKath">
+                          Twitter/ X
+                        </b></a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -304,19 +316,7 @@
           </div>
         </div>
       </section>
-      <div class="hire-me">
-        <a href="../Pages/contact-deutsch.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Stellt mich ein</p>
-          </div>
-        </a>
-      </div>
+
       <div class="backtotop">
         <a href="#" aria-label="Zurück nach oben">
           <span class="back-to">Nach</span> oben
