--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -265,6 +265,18 @@
                         ></a
                       >
                     </li>
+                    <li>
+                      <a
+                        href="https://x.com/DraculadyKath"
+                        target="_blank"
+                        aria-label="facebook page"
+                      >
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <b title="https://x.com/DraculadyKath">
+                          Twitter/ X
+                        </b></a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -322,19 +334,7 @@
           <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
-      <div class="hire-me">
-        <a href="./contact-english.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Hire me</p>
-          </div>
-        </a>
-      </div>
+
       <div class="languages">
         <a href="./contact-deutsch.html" aria-label="Change Language to German">
           <p>
