--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -169,6 +169,9 @@
                   target="_blank"
                   ><i class="bx bxl-facebook-circle"></i
                 ></a>
+                <a href="https://x.com/DraculadyKath" target="_blank"
+                  ><i class="bx bxl-twitter"></i
+                ></a>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
