mobile resume english

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="portfolio-english">
+<html lang="en" data-page="resume-english">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -496,6 +496,7 @@
     </footer>
     <script src="../Scripts/script.js"></script>
     <script src="../Scripts/resume.js"></script>
+    <script src="../Scripts/transfer-resume.js"></script>
     <!-- Async or defer for external scripts -->
 
     <script>
